[gd_scene load_steps=4 format=3 uid="uid://6fk1wjoyh1e0"]

[ext_resource type="Script" uid="uid://dytvr5g7vn0ih" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="AudioStream" uid="uid://cxrl4nxjuifw1" path="res://sounds/eat_chomp.wav" id="2_h2yge"]
[ext_resource type="AudioStream" uid="uid://b2ds3i3116dlx" path="res://sounds/game_over.wav" id="3_1bvp3"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Border" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 640.0
color = Color(1, 0.59607846, 0, 1)

[node name="Background" type="ColorRect" parent="."]
z_index = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 624.0
offset_bottom = 624.0
color = Color(0.16862746, 0.16862746, 0.16862746, 1)

[node name="Snake" type="Node2D" parent="."]
z_index = 2

[node name="Head" type="ColorRect" parent="Snake"]
offset_left = 32.0
offset_top = 32.0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0, 1, 0, 1)

[node name="Apple" type="ColorRect" parent="."]
z_index = 2
offset_left = 128.0
offset_top = 128.0
offset_right = 160.0
offset_bottom = 160.0
color = Color(1, 0, 0, 1)

[node name="ScoreLabel" type="Label" parent="."]
z_index = 3
offset_left = 24.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 36.0

[node name="EatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_h2yge")

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1bvp3")
